# flappyy

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt  debug.hpp  engine.cpp  engine.hpp  engine_gl.cpp  engine_gl.hpp
engine/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
res/: flappyy.ini
source/: game.cpp  main.cpp  menu.cpp  states.hpp
